--- a/eventos.html
+++ b/eventos.html
@@ -41,15 +41,15 @@
       		</li>
      
       		<li class="nav-item">
-        		<a class="nav-link" href="Eventos.html">Eventos</a>
+        		<a class="nav-link" href="eventos.html">Eventos</a>
       		</li>
        
        		<li class="nav-item">
-       			 <a class="nav-link" href="Servicios.html">Servicios</a>
+       			 <a class="nav-link" href="servicios.html">Servicios</a>
      		 </li>
 
        		<li class="nav-item">
-       			 <a class="nav-link" href="Contactos.html">Contacto</a>
+       			 <a class="nav-link" href="contactos.html">Contacto</a>
      		</li>
 
 
