--- a/servicios.html
+++ b/servicios.html
@@ -34,9 +34,9 @@
         
                       <li> <a href="index.html">Home</a> </li>
               <li> <a href="ceremonias.html">Ceremonias</a> </li>
-              <li> <a href="Eventos.html">Eventos</a> </li>
-              <li> <a href="Servicios.html">Servicios</a> </li>
-              <li> <a href="Contactos.html">Contacto</a> </li>            
+              <li> <a href="eventos.html">Eventos</a> </li>
+              <li> <a href="servicios.html">Servicios</a> </li>
+              <li> <a href="contactos.html">Contacto</a> </li>            
             </ul>
                 
             </div>
