--- a/ceremonias.html
+++ b/ceremonias.html
@@ -11,7 +11,8 @@
 		crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;700&display=swap" rel="stylesheet"> 
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600;700&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600;700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	</head>
 
 
@@ -26,7 +27,7 @@
   		<img src="img/logo.jpg" alt="logo.provisorio" class=" navbar-brand logo">
 
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    			<span class="navbar-toggler-icon"></span>
+    			<span class="navbar-toggler-icon estilo__boton"></span>
   			</button>
 
   	<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,19 +67,20 @@
 
 
 
-
+ 
+<div class="container" id="momentos" > <!-- no puedo hacer que sea Sticky -->
+	<p> Momentos Inolvidables </p>
+		</div>
 
 
 <main class="container">
 	<div class="row">
-		 
-		 </div class="container" > <!-- no puedo hacer que sea Sticky -->
-			<p id="momentos"> Momentos inolvidables </p>
-		</div>
+		
 
-				<div class="momentos_inolvidables prueba1 col-lg-12 col-md-6 col-sm-6"> 
+			<div class="momentos_inolvidables prueba1 col-lg-12 col-md-6 col-sm-6"> 
 
-						<p class="titulos_paginas text-center"> Boda Pepito y Pepita</p>
+
+						<p class="titulos_paginas text-center animate__animated animate__fadeIn"> Boda Pepito y Pepita</p>
 
 			<article class="texto_ceremonias text-center"> 
 	
@@ -90,12 +92,13 @@
        		<a class="botones2" href="bodadepepita.html">Ver más</a>
 
 
+
 			</div> 
 
 	
 			<div class="momentos_inolvidables prueba2  col-lg-12 col-md-6 col-sm-6"> 	
 		
-						<p class="titulos_paginas"> Quince de Juanita</p>
+						<p class="titulos_paginas animate__animated animate__fadeIn"> Quince de Juanita</p>
 
 			<article class="texto_ceremonias  text-center"> 
 		
