--- a/eventos.html
+++ b/eventos.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="estilo.css">
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;700&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600;700&display=swap" rel="stylesheet"> 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	</head>
 
 <body>
@@ -25,7 +26,7 @@
   		<img src="img/logo.jpg" alt="logo.provisorio" class=" navbar-brand logo">
 
   			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    			<span class="navbar-toggler-icon"></span>
+    			<span class="navbar-toggler-icon estilo__boton"></span>
   			</button>
 
   	<div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -66,51 +67,57 @@
 
 <section class="container galeria__eventos">
 
-	<h1 class="text-center pt-5" >Especialidades</h1>
+	<h1 class="text-center pt-5 titulos_paginas animate__animated animate__fadeIn" >Especialidades</h1>
 
-	  <div class="linea"></div>
+	  <div class="linea animate__animated animate__fadeIn"></div>
 
 		<div class="row contenedor__imagenes">
 
 			<div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/1.caba.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Estancia "Los alamos" 19/08/2019</h2>
+                    <h2>Estancia "Los alamos" <h2>
+                    <h1>19/08/2019</h1>
                 </div>
             </div> 
 
 			<div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/2.caba.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Estancia "La perdida" 23/06/2019</h2>
+                    <h2>Estancia "La perdida"</h2>
+                    <h1>23/06/2019</h1>
                 </div>
             </div> 
 
  			<div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/4.caba.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Torneo polo "Copa Pringles 22/05/2019"</h2>
+                    <h2>Copa "Polo Pringles"</h2>
+                    <h1>22/05/2019</h1>
                 </div>
             </div> 
 
             <div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/1.nata.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Torneo Metropolitano 22/08/2019</h2>
+                    <h2>Torneo Metropolitano</h2>
+                    <h1>22/08/2019</h1>
                 </div>
             </div> 
 
 	  		<div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/2.nata.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Torneo Metropolitano 22/08/2019</h2>
+                    <h2>Torneo Metropolitano</h2>
+                    <h1>22/08/2019</h1>
                 </div>
             </div> 
 
 	  		<div class="col-lg-4 col-md-6 col-sm-12 imagen">
 		      <img src="img/3.nata.jpg" alt="Fotografia Equina">
 		      	<div class="overlay">
-                    <h2>Torneo Metropolitano 22/08/2019</h2>
+                    <h2>Torneo Metropolitano</h2>
+                    <h1>22/08/2019</h1>
                 </div>    
 
   
