--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,8 @@
     crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;700&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;300;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> 
   </head>
 
 <body>
@@ -27,7 +28,7 @@
       <img src="img/logo.jpg" alt="logo.provisorio" class=" navbar-brand logo">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+         <span class="navbar-toggler-icon estilo__boton"></span>
         </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -74,7 +75,7 @@
   <div class="row ">
     
     <div class="col-md-12 text-center"> 
-        <h1 class="titulo__servicios" >Alquiler de Equipos</h1>
+        <h1 class="titulo__servicios titulos_paginas animate__animated animate__fadeIn" >Alquiler de Equipos</h1>
     </div>
       
     <div class="col-md-6 col-sm-6 d-flex justify-content-center">
